--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "prettier-plugin-svelte": "^2.2.0",
     "vite": "^2.3.0",
     "vite-plugin-ts-checker": "^0.1.3",
-    "@santiment-network/chart": "^0.10.3",
-    "san-webkit": "git+https://github.com/santiment/san-webkit.git#df82244"
+    "@santiment-network/chart": "^0.10.3"
   },
   "dependencies": {
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.6.9",
     "svelte-preprocess-cssmodules": "^1.3.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "san-webkit": "git+https://github.com/santiment/san-webkit.git#df82244",
+    "@santiment-network/chart": "^0.10.3"
   },
   "peerDependencies": {
     "svelte": "^3.38.2",
