--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "vite preview",
     "validate": "svelte-check",
     "validate:errors": "yarn validate --threshold error",
-    "lib:ts": "tsc --outDir lib",
+    "lib:ts": "tsc --outDir lib --p ./tsconfig.json",
     "lib": "npm run lib:ts && node scripts/lib.js",
     "install": "npm run lib"
   },
