--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "@santiment-network/chart": "^0.10.3"
   },
   "dependencies": {
-    "san-webkit": "git+https://github.com/santiment/san-webkit.git#adbf550",
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.6.9",
     "svelte-preprocess-cssmodules": "^1.3.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#adbf550"
   },
   "peerDependencies": {
     "svelte": "^3.38.2",
     "@santiment-network/chart": "^0.10.3",
-    "san-webkit": "git+https://github.com/santiment/san-webkit.git#adbf550"
+    "san-webkit": "https://github.com/santiment/san-webkit.git#adbf550"
   }
 }
