--- a/package.json
+++ b/package.json
@@ -25,20 +25,21 @@
     "eslint-svelte3-preprocess": "0.0.5",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "vite": "^2.3.0",
+    "vite": "^2.4.0",
     "vite-plugin-ts-checker": "^0.1.3",
-    "@santiment-network/chart": "^0.10.4"
+    "@santiment-network/chart": "^0.10.4",
+    "svelte": "^3.38.2",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#6ff9cf5"
   },
   "dependencies": {
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.6.9",
     "svelte-preprocess-cssmodules": "^1.3.2",
-    "typescript": "^4.2.4",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#6837925"
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "svelte": "^3.38.2",
     "@santiment-network/chart": "^0.10.4",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#6837925"
+    "san-webkit": "https://github.com/santiment/san-webkit.git#6ff9cf5"
   }
 }
