--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "vite": "^2.4.0",
     "vite-plugin-ts-checker": "^0.1.3",
     "@santiment-network/chart": "^0.10.7",
-    "svelte": "^3.38.2",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#6ff9cf5"
+    "svelte": "^3.38.2"
   },
   "dependencies": {
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.6.9",
     "svelte-preprocess-cssmodules": "^1.3.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#6ff9cf5"
   },
   "peerDependencies": {
     "svelte": "^3.38.2",
