--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "install": "npm run lib"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
+    "@santiment-network/chart": "^0.10.9",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.13",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
@@ -24,20 +25,19 @@
     "eslint-svelte3-preprocess": "0.0.5",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "vite": "^2.4.0",
-    "vite-plugin-ts-checker": "^0.1.3",
-    "@santiment-network/chart": "^0.10.9",
-    "svelte": "^3.38.2"
+    "svelte": "^3.40.0",
+    "vite": "^2.4.3",
+    "vite-plugin-ts-checker": "^0.1.5"
   },
   "dependencies": {
     "svelte-check": "^1.5.2",
-    "svelte-preprocess": "^4.6.9",
+    "svelte-preprocess": "^4.7.4",
     "svelte-preprocess-cssmodules": "^1.3.2",
     "typescript": "^4.2.4",
     "san-webkit": "https://github.com/santiment/san-webkit.git#6ff9cf5"
   },
   "peerDependencies": {
-    "svelte": "^3.38.2",
+    "svelte": "^3.40.0",
     "@santiment-network/chart": "^0.10.9",
     "san-webkit": "https://github.com/santiment/san-webkit.git#6ff9cf5"
   }
