--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     "eslint-svelte3-preprocess": "0.0.5",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.41.0",
+    "svelte": "^3.42.1",
     "vite": "^2.4.3",
     "vite-plugin-ts-checker": "^0.1.5"
   },
   "dependencies": {
+    "mathjs": "^9.4.4",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#41573ef",
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.4",
     "svelte-preprocess-cssmodules": "^1.3.2",
-    "typescript": "^4.2.4",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#41573ef"
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "svelte": "^3.41.0",
+    "svelte": "^3.42.1",
     "@santiment-network/chart": "^0.10.9",
     "san-webkit": "https://github.com/santiment/san-webkit.git#41573ef"
   }
