--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -3,7 +3,7 @@
     "moduleResolution": "node",
     "target": "ES2016",
     "module": "esnext",
-    "importsNotUsedAsValues": "error",
+    "importsNotUsedAsValues": "remove",
     "isolatedModules": true,
     "sourceMap": true,
     "esModuleInterop": true,
