--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
   },
   "dependencies": {
     "mathjs": "^9.4.4",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#45b0180",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#4e18115",
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.4",
-    "svelte-preprocess-cssmodules": "^1.3.2",
+    "svelte-preprocess-cssmodules": "https://github.com/DmitriVanGuard/svelte-preprocess-cssmodules#0fe6fa7",
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "svelte": "^3.42.6",
+    "svelte": "^3.44.1",
     "@santiment-network/chart": "^0.10.10",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#45b0180"
+    "san-webkit": "https://github.com/santiment/san-webkit.git#4e18115"
   }
 }
