Voting for layouts

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "author": "DmitriVanGuard <dimavanguard@gmail.com>",
   "private": true,
+  "engines": {
+    "node": "<=14"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -31,7 +34,7 @@
   },
   "dependencies": {
     "mathjs": "^9.4.4",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#9c3b38f",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#852f106",
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.4",
     "svelte-preprocess-cssmodules": "https://github.com/DmitriVanGuard/svelte-preprocess-cssmodules#895859f",
@@ -40,7 +43,7 @@
   "peerDependencies": {
     "svelte": "^3.44.1",
     "@santiment-network/chart": "^0.10.12",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#9c3b38f",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#852f106",
     "canvas": "^2.8.0"
   }
 }
