--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "svelte": "^3.46.3",
     "@santiment-network/chart": "^0.10.12",
     "san-webkit": "https://github.com/santiment/san-webkit.git#615fb08",
-    "canvas": "^2.8.0"
+    "canvas": "^2.8.0",
+    "turndown": "^7.1.1",
+    "medium-editor": "^5.23.3",
+    "marked": "^4.0.12"
   }
 }
