--- a/package.json
+++ b/package.json
@@ -39,16 +39,18 @@
   },
   "dependencies": {
     "mathjs": "^9.4.4",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#5c7f95d",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#056ec82",
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.4",
     "svelte-preprocess-cssmodules": "https://github.com/DmitriVanGuard/svelte-preprocess-cssmodules#895859f",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "phoenix": "^1.6.6"
   },
   "peerDependencies": {
     "svelte": "^3.46.3",
     "@santiment-network/chart": "^0.10.12",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#5c7f95d",
-    "canvas": "^2.8.0"
+    "san-webkit": "https://github.com/santiment/san-webkit.git#056ec82",
+    "canvas": "^2.8.0",
+    "phoenix": "^1.6.6"
   }
 }
