--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
+    "test": "jest",
     "validate": "svelte-check",
     "validate:errors": "yarn validate --threshold error",
     "lib:prepare": "node scripts/prepare.js && tsc --p ./scripts/tsconfig.json && node scripts/cleanup.js",
@@ -43,7 +44,10 @@
     "svelte": "^3.47.0",
     "turndown": "^7.1.1",
     "vite": "^2.5.1",
-    "vite-plugin-ts-checker": "^0.1.5"
+    "vite-plugin-ts-checker": "^0.1.5",
+    "ts-jest": "^26.5.6",
+    "jest": "^26.6.3",
+    "node-fetch": "^2.6.1"
   },
   "dependencies": {
     "mathjs": "^9.4.4",
