Ignoring test files in tsconfig

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -15,11 +15,6 @@
     "strictNullChecks": true,
     "declaration": true
   },
-  "include": [
-    "../lib/**/*.d.ts",
-    "../lib/**/*.ts",
-    "../lib/**/*.js",
-    "../lib/**/*.svelte"
-  ],
-  "exclude": ["node_modules/*"]
+  "include": ["../lib/**/*.d.ts", "../lib/**/*.ts", "../lib/**/*.js", "../lib/**/*.svelte"],
+  "exclude": ["node_modules/*", "../lib/**/*.test.js"]
 }
