--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,5 +41,5 @@
    * to avoid limiting type declarations.
    */
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
-  "exclude": ["node_modules/*"]
+  "exclude": ["node_modules/*", "src/**/*.test.js"]
 }
