--- a/package.json
+++ b/package.json
@@ -41,23 +41,23 @@
     "eslint-plugin-svelte3": "^3.1.2",
     "eslint-svelte3-preprocess": "0.0.5",
     "husky": "^7.0.4",
+    "jest": "^26.6.3",
     "lint-staged": "^12.3.7",
     "marked": "^4.0.12",
     "medium-editor": "^5.23.3",
+    "node-fetch": "^2.6.1",
     "patch-package": "^6.4.7",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.47.0",
+    "svelte": "^3.48.0",
+    "ts-jest": "^26.5.6",
     "turndown": "^7.1.1",
     "vite": "^2.5.1",
-    "vite-plugin-ts-checker": "^0.1.5",
-    "ts-jest": "^26.5.6",
-    "jest": "^26.6.3",
-    "node-fetch": "^2.6.1"
+    "vite-plugin-ts-checker": "^0.1.5"
   },
   "dependencies": {
     "mathjs": "^9.4.4",
-    "san-webkit": "https://github.com/santiment/san-webkit.git#db33a61",
+    "san-webkit": "https://github.com/santiment/san-webkit.git#4ab06fa",
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.4",
     "svelte-preprocess-cssmodules": "https://github.com/DmitriVanGuard/svelte-preprocess-cssmodules#895859f",
