--- a/package.json
+++ b/package.json
@@ -43,32 +43,30 @@
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "lint-staged": "^12.3.7",
-    "marked": "^4.0.12",
-    "medium-editor": "^5.23.3",
     "node-fetch": "^2.6.1",
     "patch-package": "^6.4.7",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.48.0",
+    "svelte": "^3.49.0",
     "ts-jest": "^26.5.6",
-    "turndown": "^7.1.1",
     "vite": "^2.5.1",
-    "vite-plugin-ts-checker": "^0.1.5"
+    "vite-plugin-ts-checker": "^0.1.5",
+    "typescript": "^4.7.4",
+    "svelte-preprocess": "^4.7.4",
+    "svelte-preprocess-cssmodules": "https://github.com/DmitriVanGuard/svelte-preprocess-cssmodules#3b24f22",
+    "svelte-check": "^1.5.2"
   },
   "dependencies": {
     "mathjs": "^9.4.4",
-    "san-webkit": "https://github.com/santiment/san-webkit#e418432",
-    "svelte-check": "^1.5.2",
-    "svelte-preprocess": "^4.7.4",
-    "svelte-preprocess-cssmodules": "https://github.com/DmitriVanGuard/svelte-preprocess-cssmodules#3b24f22",
-    "typescript": "^4.2.4",
-    "phoenix": "^1.6.6"
+    "san-webkit": "https://github.com/santiment/san-webkit#1590221",
+    "marked": "^4.0.12",
+    "medium-editor": "^5.23.3",
+    "turndown": "^7.1.1"
   },
   "peerDependencies": {
     "svelte": "^3.46.3",
     "@santiment-network/chart": "^0.10.12",
     "san-webkit": "https://github.com/santiment/san-webkit.git",
-    "canvas": "^2.8.0",
-    "phoenix": "^1.6.6"
+    "canvas": "^2.8.0"
   }
 }
