--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "svelte-check": "^1.5.2"
   },
   "dependencies": {
-    "mathjs": "^9.4.4",
     "san-webkit": "https://github.com/santiment/san-webkit#1590221",
+    "mathjs": "^9.4.4",
     "marked": "^4.0.12",
     "medium-editor": "^5.23.3",
     "turndown": "^7.1.1"
@@ -66,7 +66,7 @@
   "peerDependencies": {
     "svelte": "^3.46.3",
     "@santiment-network/chart": "^0.10.12",
-    "san-webkit": "https://github.com/santiment/san-webkit.git",
+    "san-webkit": "https://github.com/santiment/san-webkit",
     "canvas": "^2.8.0"
   }
 }
