--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -13,7 +13,10 @@
     "allowJs": true,
     "checkJs": true,
     "strictNullChecks": true,
-    "declaration": true
+    "declaration": true,
+    "paths": {
+      "san-webkit/lib/*": ["../node_modules/san-webkit/lib/*"]
+    }
   },
   "include": ["../lib/**/*.d.ts", "../lib/**/*.ts", "../lib/**/*.js", "../lib/**/*.svelte"],
   "exclude": ["node_modules/*", "../lib/**/*.test.js"]
