Lib types exported

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "<=14"
   },
+  "types": "lib/types/index.d.ts",
   "lint-staged": {
     "*.{js,ts,svelte,css,md,mdx}": [
       "prettier --write"
@@ -61,7 +62,7 @@
     "turndown": "^7.1.1",
     "mathjs": "^9.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.18.9",
-    "san-webkit": "https://github.com/santiment/san-webkit#2583a9d"
+    "san-webkit": "https://github.com/santiment/san-webkit#2aeab55"
   },
   "peerDependencies": {
     "svelte": "^3.49.0",
