--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "lib:prepare": "node scripts/prepare.js && tsc --p ./scripts/tsconfig.json && node scripts/cleanup.js",
     "lib": "npm run lib:prepare && node scripts/lib.js",
     "lib:publish": "node scripts/publish",
-    "postinstall": "patch-package",
-    "prepare": "husky install"
+    "prepare": "husky install && patch-package"
   },
   "devDependencies": {
     "@santiment-network/chart": "^0.10.16",
@@ -36,18 +35,18 @@
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-svelte3": "^3.1.2",
+    "eslint-plugin-svelte3": "^4.0.0",
     "eslint-svelte3-preprocess": "0.0.5",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "lint-staged": "^12.3.7",
     "node-fetch": "^2.6.1",
     "patch-package": "^6.4.7",
-    "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.49.0",
+    "prettier": "^2.8.4",
+    "prettier-plugin-svelte": "^2.9.0",
+    "svelte": "^3.56.0",
     "ts-jest": "^26.5.6",
     "vite": "^2.5.1",
     "vite-plugin-ts-checker": "^0.1.5",
@@ -62,11 +61,11 @@
     "turndown": "^7.1.1",
     "mathjs": "^9.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.18.9",
-    "san-webkit": "https://github.com/santiment/san-webkit#337850c"
+    "san-webkit": "https://github.com/santiment/san-webkit#f963a57"
   },
   "peerDependencies": {
-    "svelte": "^3.49.0",
-    "@santiment-network/chart": "^0.10.12",
+    "svelte": "^3.56.0",
+    "@santiment-network/chart": "^0.10.16",
     "san-webkit": "https://github.com/santiment/san-webkit",
     "canvas": "^2.8.0",
     "mathjs": "^9.4.4"
